[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/guns/slimegun/slime-puddle.aseprite" type="SpriteFrames" id=1]
[ext_resource path="res://entities/slime_puddle.gd" type="Script" id=2]

[sub_resource type="CylinderShape" id=1]
radius = 0.317648
height = 0.108486

[node name="slime_puddle" type="Area" groups=[
"slime_puddle",
]]
script = ExtResource( 2 )

[node name="Spatial" type="AnimatedSprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.0143179, 0 )
frames = ExtResource( 1 )
frame = 8
playing = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.055029, 0 )
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_slime_puddle_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_slime_puddle_body_entered"]
